...
                                        flex: 5,
                                        child: Container(
                                          height: 35,
                                          padding: const EdgeInsets.symmetric(
                                              vertical: 2),
                                          child: ListView.builder(
                                            key: const ValueKey('player1'),
                                            reverse: true,
                                            scrollDirection: Axis.horizontal,
                                            itemCount: data.allPlayers.length,
                                            itemBuilder: (BuildContext context,
                                                int index) {
                                              final player =
...
                                          flex: 5,
                                          child: Container(
                                            height: 35,
                                            padding: const EdgeInsets.symmetric(
                                                vertical: 2),
                                            child: ListView.builder(
                                                key: const ValueKey('player2'),
                                                reverse: true,
                                                scrollDirection:
                                                    Axis.horizontal,
                                                itemCount:
                                                    data.allPlayers.length,
                                                itemBuilder:
...
                                    mainAxisAlignment:
                                        MainAxisAlignment.spaceBetween,
                                    children: <Widget>[
                                      Text(S.of(context).addModifyContractType),
                                      DropdownButton(
                                          key: const ValueKey(
                                              'dropdown-contract'),
                                          value: data.prise,
                                          items: Prise.values
                                              .map((e) =>
                                                  DropdownMenuItem<Prise>(
                                                      value: e,
                                                      child:
...
                                    mainAxisAlignment: MainAxisAlignment.start,
                                    crossAxisAlignment:
                                        CrossAxisAlignment.center,
                                    children: <Widget>[
                                      DropdownButton(
                                          key: const ValueKey(
                                              'dropdown-oudlers'),
                                          value: data.nbBouts,
                                          items: List.generate(
                                                  data.allPlayers.length > 5
                                                      ? 7
                                                      : 4,
                                                  (index) => index)
...
                                        flex: 2,
                                        child: Padding(
                                          padding:
                                              const EdgeInsets.only(left: 16),
                                          child: DropdownButton<PoigneeType>(
                                              key: const ValueKey(
                                                  'dropdown-handful'),
                                              value: data.poignees[0],
                                              isExpanded: true,
                                              items: PoigneeType.values
                                                  .map(
                                                    (e) => DropdownMenuItem<
                                                            PoigneeType>(
...
