...
//            onPressed: () {
//              if (formKey.currentState.validate()) {
//                Navigator.of(context).pop();
//                doAfterChosen(players);
//              }
//            },
//            child: Text("OK"))
//      ],
    );
  }
}

class DialogPlayerBody extends ConsumerStatefulWidget {
...
